# xcomponent

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  mkdocs.yml  pyproject.toml
.github/workflows/: build-wheels.yml  publish-doc.yml  tests.yml
docs/: api.md  api_xcore.md  getting_started.md
docs/source/: index.md
docs/source/user/: getting_started.md  index.md
src/: lib.rs
src/python/xcomponent/: __init__.py  xcore.pyi
src/python/xcomponent/adapters/: babel.py
src/python/xcomponent/service/: catalog.py
src/rust/: context.rs  lib.rs
src/rust/catalog/: catalog.rs
src/rust/expression/: ast.rs  eval_ast.rs  grammar.pest  i18n.rs  mod.rs  parser.rs  tokens.rs
src/rust/expression/ast/: eval.rs  model.rs  parse.rs
src/rust/markup/: grammar.pest  parser.rs  tokens.rs
tests/: test_core.py  test_parse_str.py  test_render.py  test_render_expression.py
tests/functionals/i18n/: fr.mo  mydomain.pot  test_l10n.py
tests/unittests/: conftest.py  test_import_namespace.py  test_render_attributes.py  test_render_expression.py  test_render_globals.py  test_render_globals_obj.py  test_render_globals_obj2.py  test_render_nested_node.py  test_render_node.py  test_render_script.py
tests/unittests/adapters/: babel.ini  domain.pot  test_babel.py
tests/unittests/expression/: test_binary_eq.py  test_binary_expr.py  test_binary_op.py  test_default_values.py  test_field_access.py  test_func.py  test_if_expr.py  test_nested.py  test_types.py
xcomponent/: xcomponent.pyi
