[package]
name = "xcomponent"
version = "0.0.1"
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]
edition = "2021"
description = "JSX-like for python using maturin/pyo3 based on rsml."
license = "MIT"
readme = "README.md"

[dependencies]
pyo3 = { version = "0.22.5", features = ["extension-module"] }
rstml = "0.12.1"
quote = "1"
proc-macro2 = "1.0.95"
syn = "2.0.101"

[lib]
name = "xcomponent"
crate-type = ["staticlib"]

[package.metadata.maturin]
bindings = "pyo3"

[tool.maturin]
features = ["pyo3/extension-module"]
