[project]
name = "xcomponent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Guillaume Gauvrit", email = "guillaume@gauvr.it" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.4",
    "venusian>=3.1.1",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]


[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.maturin]
bindings = "pyo3"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
