[project]
name = "xcomponent"
version = "0.2.1"
description = "A component base template engige - inspired by JSX"
readme = "README.md"
authors = [{ name = "Guillaume Gauvrit", email = "guillaume@gauvr.it" }]
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Software Development :: User Interfaces",
    "Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]


[dependency-groups]
dev = ["pytest >=8.3.5,<9"]
docs = [
    "mkdocs-include-markdown-plugin >=7.1.5",
    "mkdocstrings[python] >=0.29.1,<1",
    "mkdocs >=1.6.1,<2",
    "mkdocs-material>=9.6.14",
]

[tool.maturin]
bindings = "pyo3"
python-source = "src/python"
module-name = "xcomponent.xcore"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
